--- a/config.org
+++ b/config.org
@@ -24,7 +24,9 @@
 #+end_src
 
 
-** Basic UI customizations
+* User interface
+
+** Remove fluff
 
 #+begin_src emacs-lisp
 ;; No annoying startup screen.
@@ -34,6 +36,32 @@
 (tool-bar-mode -1)
 (menu-bar-mode -1)
 (scroll-bar-mode -1)
+#+end_src
+
+** Fonts
+
+#+begin_src emacs-lisp
+;; UTF-8 by default.
+(set-charset-priority 'unicode)
+(set-terminal-coding-system 'utf-8)
+(set-keyboard-coding-system 'utf-8)
+(set-selection-coding-system 'utf-8)
+(prefer-coding-system 'utf-8)
+
+;; Preffered fonts.
+(cond
+ ((member "Fira Code" (font-family-list))
+  (set-face-attribute 'default nil :font "Fira Code" :height 120))
+ ((member "JetBrains Mono" (font-family-list))
+  (set-face-attribute 'default nil :font "JetBrains Mono" :height 120))
+ ((member "Source Code Pro" (font-family-list))
+  (set-face-attribute 'default nil :font "Source Code Pro" :height 120))
+ (t (message "Preferred fonts not found, using system default.")))
+#+end_src
+
+** Other UI customizations
+
+#+begin_src emacs-lisp
 
 ;; Better scrolling.
 (setq scroll-step 1                ; Scroll 1 line at a time.
@@ -48,25 +76,8 @@
 ;; Highlight matching parentheses.
 (show-paren-mode t)
 
-;; UTF-8 by default.
-(set-charset-priority 'unicode)
-(set-terminal-coding-system 'utf-8)
-(set-keyboard-coding-system 'utf-8)
-(set-selection-coding-system 'utf-8)
-(prefer-coding-system 'utf-8)
-
 ;; More succint Yes/No prompts.
 (fset 'yes-or-no-p 'y-or-n-p)
-
-;; Preffered fonts.
-(cond
- ((member "Fira Code" (font-family-list))
-  (set-face-attribute 'default nil :font "Fira Code" :height 120))
- ((member "JetBrains Mono" (font-family-list))
-  (set-face-attribute 'default nil :font "JetBrains Mono" :height 120))
- ((member "Source Code Pro" (font-family-list))
-  (set-face-attribute 'default nil :font "Source Code Pro" :height 120))
- (t (message "Preferred fonts not found, using system default.")))
 #+end_src
 
 ** Theme
@@ -89,33 +100,6 @@ Doom theme is another option:
 ;; (use-package doom-themes
 ;;   :ensure t
 ;;   :config (load-theme 'doom-one t))
-#+end_src
-
-
-* Essential packages
-** Undo-Tree
-
-Visual undo/redo history and more standard undo/redo bindings.
-
-#+begin_src emacs-lisp
-(use-package undo-tree
-  :ensure t
-  :diminish undo-tree-mode
-  :config
-  (global-undo-tree-mode 1)
-  (global-set-key (kbd "C-z") 'undo)
-  (global-set-key (kbd "C-S-z") 'undo-tree-redo))
-#+end_src
-
-** Magit
-
-#+begin_src emacs-lisp
-(use-package magit
-  :ensure t
-  :defer t ; Will load when a magit command is called.
-  :bind (("C-x g" . magit-status)
-         ("C-x M-g" . magit-dispatch)
-         ("C-c M-g" . magit-file-dispatch)))
 #+end_src
 
 
@@ -157,6 +141,33 @@ Provides a side panel that helps navigating through the project.
   :bind ("<f4>" . treemacs)
   :custom (treemacs-is-never-other-window t)
   :hook (treemacs-mode . treemacs-project-follow-mode))
+#+end_src
+
+
+* Essential packages
+** Undo-Tree
+
+Visual undo/redo history and more standard undo/redo bindings.
+
+#+begin_src emacs-lisp
+(use-package undo-tree
+  :ensure t
+  :diminish undo-tree-mode
+  :config
+  (global-undo-tree-mode 1)
+  (global-set-key (kbd "C-z") 'undo)
+  (global-set-key (kbd "C-S-z") 'undo-tree-redo))
+#+end_src
+
+** Magit
+
+#+begin_src emacs-lisp
+(use-package magit
+  :ensure t
+  :defer t ; Will load when a magit command is called.
+  :bind (("C-x g" . magit-status)
+         ("C-x M-g" . magit-dispatch)
+         ("C-c M-g" . magit-file-dispatch)))
 #+end_src
 
 
