Prettify org mode sections

--- a/config.org
+++ b/config.org
@@ -158,8 +158,22 @@ Visual undo/redo history and more standard undo/redo bindings.
 
 * Org-Mode
 
+Use unicode bullets for the section levels:
 #+begin_src emacs-lisp
-(use-package org-modern)
+(use-package org-bullets)
+(setq org-bullets-face-name (quote org-bullet-face))
+(add-hook 'org-mode-hook 'org-bullets-mode)
+(setq org-bullets-bullet-list '("●" "◉" "⊚" "○" "∘"))
+#+end_src
+
+Force the same height for sections:
+#+begin_src emacs-lisp
+(custom-set-faces
+  '(org-level-1 ((t (:inherit outline-1 :height 1.0))))
+  '(org-level-2 ((t (:inherit outline-2 :height 1.0))))
+  '(org-level-3 ((t (:inherit outline-3 :height 1.0))))
+  '(org-level-4 ((t (:inherit outline-4 :height 1.0))))
+  '(org-level-5 ((t (:inherit outline-5 :height 1.0)))) )
 #+end_src
 
 ** Babel
