--- a/config.org
+++ b/config.org
@@ -163,6 +163,159 @@ Disable autopairing of angle brackets in org mode.
 #+end_src
 
 
+* Completion
+
+#+begin_src emacs-lisp
+(setq completion-ignore-case t
+      read-file-name-completion-ignore-case t
+      read-buffer-completion-ignore-case t)
+#+end_src
+
+** Vertico
+
+Minibuffer completion.
+
+#+begin_src emacs-lisp
+(use-package vertico
+  :init (vertico-mode))
+#+end_src
+
+Minibuffer configurations:
+#+begin_src emacs-lisp
+(use-package emacs
+  :custom
+  ;; Support opening new minibuffers from inside existing minibuffers.
+  (enable-recursive-minibuffers t)
+  ;; Hide commands in M-x which do not work in the current mode.  Vertico
+  ;; commands are hidden in normal buffers. This setting is useful beyond
+  ;; Vertico.
+  (read-extended-command-predicate #'command-completion-default-include-p)
+  ;; Do not allow the cursor in the minibuffer prompt
+  (minibuffer-prompt-properties
+   '(read-only t cursor-intangible t face minibuffer-prompt)))
+#+end_src
+
+Auto complete the longest common prefix when pressing TAB, instead of selecting the current entry.
+#+begin_src emacs-lisp
+(keymap-set vertico-map "TAB" #'minibuffer-complete)
+#+end_src
+
+** Marginalia
+
+Annotations in minibuffer.
+
+#+begin_src emacs-lisp
+(use-package marginalia
+  :bind (:map minibuffer-local-map
+         ("M-A" . marginalia-cycle))
+  :init (marginalia-mode))
+#+end_src
+
+** Consult
+
+Tons of search and navigation commands that can replace the native version.
+Only a subset are bound here.
+
+#+begin_src emacs-lisp
+(use-package consult
+  :bind (;; C-c bindings in `mode-specific-map'.
+         ("C-c M-x" . consult-mode-command)
+         ("C-c h" . consult-history)
+         ("C-c m" . consult-man)
+         ("C-c i" . consult-info)
+         ([remap Info-search] . consult-info)
+         ;; C-x bindings in `ctl-x-map'.
+         ("C-x M-:" . consult-complex-command)     ;; orig. repeat-complex-command.
+         ("C-x b" . consult-buffer)                ;; orig. switch-to-buffer.
+         ("C-x 4 b" . consult-buffer-other-window) ;; orig. switch-to-buffer-other-window.
+         ("C-x 5 b" . consult-buffer-other-frame)  ;; orig. switch-to-buffer-other-frame.
+         ("C-x t b" . consult-buffer-other-tab)    ;; orig. switch-to-buffer-other-tab.
+         ("C-x r b" . consult-bookmark)            ;; orig. bookmark-jump.
+         ("C-x p b" . consult-project-buffer)      ;; orig. project-switch-to-buffer.
+         ;; Other custom bindings
+         ("M-y" . consult-yank-pop)                ;; orig. yank-pop.
+	 ("C-s" . consult-line)                    ;; orig. isearch.
+         ;; M-g bindings in `goto-map'.
+         ("M-g e" . consult-compile-error)
+         ("M-g f" . consult-flymake)               ;; Alternative: consult-flycheck.
+         ("M-g g" . consult-goto-line)             ;; orig. goto-line.
+         ("M-g M-g" . consult-goto-line)           ;; orig. goto-line.
+         ("M-g o" . consult-outline)               ;; Alternative: consult-org-heading.
+         ("M-g m" . consult-mark)
+         ("M-g k" . consult-global-mark)
+         ("M-g i" . consult-imenu)
+         ("M-g I" . consult-imenu-multi)
+         ;; M-s bindings in `search-map'.
+         ("M-s d" . consult-find)                  ;; Alternative: consult-fd.
+         ("M-s c" . consult-locate)
+         ("M-s g" . consult-grep)
+         ("M-s G" . consult-git-grep)
+         ("M-s r" . consult-ripgrep)
+         ("M-s l" . consult-line)
+         ("M-s L" . consult-line-multi)
+         ("M-s k" . consult-keep-lines)
+         ("M-s u" . consult-focus-lines)
+
+         ;; Minibuffer history.
+         :map minibuffer-local-map
+         ("M-s" . consult-history)                 ;; orig. next-matching-history-element.
+         ("M-r" . consult-history))                ;; orig. previous-matching-history-element.
+
+  :init
+  ;; Use Consult to select xref locations with preview.
+  (setq xref-show-xrefs-function #'consult-xref
+        xref-show-definitions-function #'consult-xref)
+)
+#+end_src
+
+** Orderless
+
+Make completion menu match in a orderless, fuzzy way.
+
+#+begin_src emacs-lisp
+(use-package orderless
+  :custom
+  (completion-styles '(orderless basic))
+  (completion-categories-overrides '(file (styles basic partial-completion))))
+#+end_src
+
+** Corfu
+
+In-buffer completion (e.g. variable names).
+
+#+begin_src emacs-lisp
+(use-package corfu
+  :custom
+  (corfu-cycle t)  ;; Enable cycling for `corfu-next/previous'
+  (corfu-auto t)   ;; Automatically open the autocompletion menu.
+  ;; (corfu-quit-at-boundary nil)   ;; Never quit at completion boundary
+  ;; (corfu-quit-no-match nil)      ;; Never quit, even if there is no match
+  ;; (corfu-preview-current nil)    ;; Disable current candidate preview
+  ;; (corfu-preselect 'prompt)      ;; Preselect the prompt
+  ;; (corfu-on-exact-match nil)     ;; Configure handling of exact matches
+
+  :init
+  (global-corfu-mode)
+  (corfu-history-mode)
+  (corfu-popupinfo-mode))
+
+;; A few more useful configurations...
+(use-package emacs
+  :custom
+  ;; (completion-cycle-threshold 3) ;; TAB cycle if there are only few candidates
+  (tab-always-indent 'complete) ;; Enable indentation+completion using the TAB key.
+
+  ;; Emacs 30 and newer: Disable Ispell completion function.
+  ;; Try `cape-dict' as an alternative.
+  (text-mode-ispell-word-completion nil)
+
+  ;; Hide commands in M-x which do not apply to the current mode.  Corfu
+  ;; commands are hidden, since they are not used via M-x. This setting is
+  ;; useful beyond Corfu.
+  (read-extended-command-predicate #'command-completion-default-include-p))
+#+end_src
+
+
 * Navigation
 
 ** Treemacs
@@ -177,7 +330,7 @@ Provides a side panel that helps navigating through the project.
 #+end_src
 
 
-* Essential packages
+* Flagship packages
 ** Undo-Tree
 
 Visual undo/redo history and more standard undo/redo bindings.
