`rename-current-buffer-file` custom command

--- a/config.org
+++ b/config.org
@@ -100,9 +100,34 @@ Use =M-x sudo-edit= to reopen the current file with sudo.
 
 ** Shortcuts
 
+One-liners:
 #+begin_src emacs-lisp
 (global-set-key (kbd "<f3>") 'revert-buffer)
 (global-set-key (kbd "M-o") 'other-window)
+#+end_src
+
+
+Rename opened file:
+#+begin_src emacs-lisp
+(defun rename-current-buffer-file ()
+  "Renames current buffer and file it is visiting."
+  (interactive)
+  (let* ((name (buffer-name))
+        (filename (buffer-file-name))
+        (basename (file-name-nondirectory filename)))
+    (if (not (and filename (file-exists-p filename)))
+        (error "Buffer '%s' is not visiting a file!" name)
+      (let ((new-name (read-file-name "New name: " (file-name-directory filename) basename nil basename)))
+        (if (get-buffer new-name)
+            (error "A buffer named '%s' already exists!" new-name)
+          (rename-file filename new-name 1)
+          (rename-buffer new-name)
+          (set-visited-file-name new-name)
+          (set-buffer-modified-p nil)
+          (message "File '%s' successfully renamed to '%s'"
+                   name (file-name-nondirectory new-name)))))))
+
+(global-set-key (kbd "C-c C-r") 'rename-current-buffer-file)
 #+end_src
 
 ** Modeline
