--- a/config.org
+++ b/config.org
@@ -104,8 +104,8 @@ One-liners:
 #+begin_src emacs-lisp
 (global-set-key (kbd "<f3>") 'revert-buffer)
 (global-set-key (kbd "M-o") 'other-window)
+(global-set-key (kbd "C-x x") 'comment-box)
 #+end_src
-
 
 Rename opened file:
 #+begin_src emacs-lisp
