--- a/config.org
+++ b/config.org
@@ -32,6 +32,23 @@ Use =M-x sudo-edit= to reopen the current file with sudo.
 (use-package sudo-edit :ensure t)
 #+end_src
 
+** Small tweaks
+
+Don't pollute the folders with annoyings =*~= backups.
+#+begin_src emacs-lisp
+(setq backup-directory-alist
+      (list (cons ".*" temporary-file-directory)))
+#+end_src
+
+Use org-mode for the scratch buffer:
+#+begin_src emacs-lisp
+(setq initial-major-mode 'org-mode)
+(setq initial-scratch-message "#+property: header-args :results output
+# This buffer is for text that is not saved, and for volatile org-mode snippets.
+# To create a file, visit it with C-x C-f and enter text in its buffer.
+")
+#+end_src
+
 
 * User interface
 
@@ -91,6 +108,11 @@ Use =M-x sudo-edit= to reopen the current file with sudo.
 (add-hook 'after-init-hook 'global-color-identifiers-mode)
 #+end_src
 
+Better compatibility with the heathens:
+#+begin_src emacs-lisp
+(setq-default tab-width 4)
+#+end_src
+
 ** Theme
 
 #+begin_src emacs-lisp
@@ -102,9 +124,10 @@ Use =M-x sudo-edit= to reopen the current file with sudo.
 
 One-liners:
 #+begin_src emacs-lisp
-(global-set-key (kbd "<f3>") 'revert-buffer)
-(global-set-key (kbd "M-o") 'other-window)
 (global-set-key (kbd "C-x x") 'comment-box)
+(global-set-key (kbd "<f3>") 'revert-buffer)
+(global-set-key (kbd "<f6>") (lambda() (interactive)(find-file "~/.emacs.d/config.org")))
+(global-set-key (kbd "M-o") 'other-window)
 #+end_src
 
 Rename opened file:
@@ -378,7 +401,13 @@ Visual undo/redo history and more standard undo/redo bindings.
   :config
   (global-undo-tree-mode 1)
   (global-set-key (kbd "C-z") 'undo)
-  (global-set-key (kbd "C-S-z") 'undo-tree-redo))
+  (global-set-key (kbd "C-S-z") 'undo-tree-redo)
+  (global-set-key (kbd "C-M-z") 'redo))
+#+end_src
+
+Consider this to stop generating =.~undo-tree~= files (remove if they are not generated in the local directory):
+#+begin_src emacs-lisp
+;(setq undo-tree-auto-save-history nil)
 #+end_src
 
 ** Magit
@@ -389,6 +418,12 @@ Visual undo/redo history and more standard undo/redo bindings.
   :bind (("C-x g" . magit-status)
          ("C-x M-g" . magit-dispatch)
          ("C-c M-g" . magit-file-dispatch)))
+#+end_src
+
+** Smol but mighty
+
+#+begin_src emacs-lisp
+(use-package rg)
 #+end_src
 
 
@@ -410,6 +445,11 @@ Force the same height for sections:
   '(org-level-3 ((t (:inherit outline-3 :height 1.0))))
   '(org-level-4 ((t (:inherit outline-4 :height 1.0))))
   '(org-level-5 ((t (:inherit outline-5 :height 1.0)))) )
+#+end_src
+
+Make check boxes clickable:
+#+begin_src emacs-lisp
+(require 'org-mouse)
 #+end_src
 
 ** Babel
