Update openrouter models

--- a/config.org
+++ b/config.org
@@ -632,11 +632,16 @@ Query the key with =pass= and keep it in memory:
                  :endpoint "/api/v1/chat/completions"
                  :stream t
                  :key 'get-eonwe-api-key
-                 :models '(anthropic/claude-sonnet-4
-                           deepseek/deepseek-r1:nitro
-			   deepseek/deepseek-chat-v3-0324:nitro
-			   google/gemini-2.5-pro-preview
-                           google/gemini-2.5-flash-preview-05-20)))
+                 :models '(anthropic/claude-sonnet-4:nitro ; 15o
+                           deepseek/deepseek-r1-0528:nitro ; 2.15o
+						   deepseek/deepseek-chat-v3-0324:nitro ; .88o
+						   google/gemini-2.5-pro-preview:nitro ; 10o
+                           google/gemini-2.5-flash-preview-05-20:nitro ; .6o
+                           openai/gpt-4.1-nano:nitro ; .4o
+                           openai/gpt-4o-mini:nitro ; .6o
+                           openai/gpt-4.1-mini:nitro ; 1.6o
+                           openai/o4-mini:nitro ; 4.4o
+                           )))
 #+end_src
 
 **** Custom prompts
