--- a/config.org
+++ b/config.org
@@ -697,15 +697,16 @@ Query the key with =pass= and keep it in memory:
                           "any assumptions you need to follow instructions.")
                   article lang lang lang)))))
 
-(setq gptel-directives
-      (append gptel-directives
-              '((tests . __gptel-test-writing))))
 #+end_src
 
 #+begin_src emacs-lisp
 (setq gptel-directives
-      (append gptel-directives
-              '((tests . __gptel-test-writing))))
+      (append
+       gptel-directives
+       '((tests . __gptel-test-writing)
+         (programming . "You are a large language model and a careful programmer.
+Provide code and only code as output without any additional text, prompt or note.
+Do not enclose in a code block, output ONLY CODE."))))
 #+end_src
 
 
