--- a/config.org
+++ b/config.org
@@ -232,13 +232,37 @@ Helps a lot with discoverability and is very useful when trying to remember a co
 
 * Development
 
-** TODO Treesitter
+** Tree-sitter
 
+Language support:
 #+begin_src emacs-lisp
-;; (use-package tree-sitter
-;;   :config
-;;   (global-tree-sitter-mode)
-;;   (add-hook 'tree-sitter-after-on-hook #'tree-sitter-hl-mode))
+(setq treesit-language-source-alist
+      '(
+        (typescript "https://github.com/tree-sitter/tree-sitter-typescript" "v0.23.2" "typescript/src")
+        ;; (bash "https://github.com/tree-sitter/tree-sitter-bash")
+        ;; (cmake "https://github.com/uyha/tree-sitter-cmake")
+        ;; (css "https://github.com/tree-sitter/tree-sitter-css")
+        ;; (elisp "https://github.com/Wilfred/tree-sitter-elisp")
+        ;; (go "https://github.com/tree-sitter/tree-sitter-go")
+        ;; (html "https://github.com/tree-sitter/tree-sitter-html")
+        ;; (javascript "https://github.com/tree-sitter/tree-sitter-javascript" "master" "src")
+        ;; (json "https://github.com/tree-sitter/tree-sitter-json")
+        ;; (make "https://github.com/alemuller/tree-sitter-make")
+        ;; (markdown "https://github.com/ikatyang/tree-sitter-markdown")
+        ;; (python "https://github.com/tree-sitter/tree-sitter-python")
+        ;; (toml "https://github.com/tree-sitter/tree-sitter-toml")
+        ;; (tsx "https://github.com/tree-sitter/tree-sitter-typescript" "master" "tsx/src")
+        ;; (yaml "https://github.com/ikatyang/tree-sitter-yaml")
+        ))
+; Eval something like the following line to install an uncommented language.
+; (treesit-install-language-grammar 'typescript)
+#+end_src
+
+Package:
+#+begin_src emacs-lisp
+(use-package tree-sitter
+  :mode (("\\.ts\\'"  . typescript-ts-mode)))
+(setq typescript-ts-mode-indent-offset 4)
 #+end_src
 
 ** Eglot
