--- a/config.org
+++ b/config.org
@@ -116,8 +116,10 @@ Tabulation:
 ** Theme
 
 #+begin_src emacs-lisp
-(use-package monokai-theme
-  :config (load-theme 'monokai t))
+;; (use-package monokai-theme
+;;   :config (load-theme 'monokai t))
+(use-package spacemacs-theme
+  :config (load-theme 'spacemacs-light))
 #+end_src
 
 ** Shortcuts
@@ -159,7 +161,9 @@ Doom modeline can display icons, which are provided by =all-the-icons=.
 #+begin_src emacs-lisp
 (use-package all-the-icons
   :if (display-graphic-p))
-;; (all-the-icons-install-fonts) ; Installs the required fonts locally.
+;; Supposed to install the required fonts locally if it does not work install `nerd-fonts` or a
+;; subset like (`ttf-nerd-fonts-symbols(-mono)?`).
+;; (all-the-icons-install-fonts)
 #+end_src
 
 
@@ -547,6 +551,14 @@ Stop generating =.~undo-tree~= files:
 (setq smerge-command-prefix (kbd "C-c C-b")) ;; More reasonable smerge prefix.
 #+end_src
 
+Stop the whining of =so-long=:
+#+begin_src emacs-lisp
+(with-eval-after-load 'so-long
+  (add-to-list 'so-long-mode-preserved-minor-modes 'magit-mode)
+  (add-to-list 'so-long-target-modes 'magit-mode t))
+#+end_src
+
+
 ** Treemacs
 
 Provides a side panel that helps navigating through the project.
@@ -570,7 +582,7 @@ Provides a side panel that helps navigating through the project.
 #+begin_src emacs-lisp
 (require 'recentf)
 (recentf-mode 1)
-(setq recentf-max-menu-items 50)
+(setq recentf-max-menu-items 200)
 (global-set-key (kbd "C-x f") 'recentf)
 #+end_src
 
